--- a/marqueetextview/src/main/res/values/attrs.xml
+++ b/marqueetextview/src/main/res/values/attrs.xml
@@ -5,5 +5,6 @@
         <attr name="edgeEffectWidth" format="integer" />
         <attr name="edgeEffectColor" format="color" />
         <attr name="pauseDuration" format="integer" />
+        <attr name="forceMarqueed" format="boolean" />
     </declare-styleable>
 </resources>
