--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -10,28 +10,36 @@
 
     <uk.co.deanwild.marqueetextview.MarqueeTextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Lorem ipsum dolor sit amet."
-        android:textColor="@color/colorAccent"
-
+        android:layout_height="100dp"
+        android:background="#800"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+        android:textColor="#fff"
         android:textSize="42sp"
-        app:edgeEffectColor="#fff"
-        app:edgeEffectWidth="20"
         app:pauseDuration="3000"
-        app:showEdgeEffect="true" />
+        app:showEdgeEffect="false" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#080"
+        android:gravity="center"
+        android:text="Lorem ipsum dolor"
+        android:textColor="#fff"
+        android:textSize="42sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#999"
         android:orientation="horizontal">
 
 
         <uk.co.deanwild.marqueetextview.MarqueeTextView
-            android:background="#999"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+
             android:text="Karting"
             android:textColor="#fff"
 
@@ -44,9 +52,9 @@
 
         <uk.co.deanwild.marqueetextview.MarqueeTextView
             android:layout_width="0dp"
-            android:background="#999"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+
             android:text="Football"
             android:textColor="#fff"
 
@@ -57,7 +65,33 @@
             app:showEdgeEffect="true" />
 
 
+    </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#333"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Karting"
+            android:textColor="#fff"
+            android:textSize="24sp" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Football"
+            android:textColor="#fff"
+            android:textSize="24sp" />
 
 
     </LinearLayout>
