fix edgeEffectEnabled setter

--- a/marqueetextview/src/main/res/values/attrs.xml
+++ b/marqueetextview/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <resources>
     <declare-styleable name="PieChart">
         <attr name="marqueeEnabled" format="boolean" />
-        <attr name="showEdgeEffect" format="boolean" />
+        <attr name="edgeEffectEnabled" format="boolean" />
         <attr name="edgeEffectWidth" format="integer" />
         <attr name="edgeEffectColor" format="color" />
         <attr name="pauseDuration" format="integer" />
